--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="loading">Loading Proxy...</div>
+    <div id="loading">Loading Roblox Proxy...</div>
     <div id="start" style="display: none; text-align: center;">
-      Click to enable sound (required).<br />
+      Roblox requires you to enable sound. Please click this text to continue...<br />
       Brought to you by Annotate.
     </div>
     <div id="data"></div>
