--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     </div>
     <div id="data"></div>
     <video id="video" playingline style="display: none; pointer-events: none;"></video>
+    <img src="https://images.rbxcdn.com/c83761712c58384892d63501cad3a1ee" class="fullscreen"> 
   </body>
 </html>
